--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
+    "graphql-iso-date": "^3.5.0",
     "graphql-yoga": "^1.14.10",
     "jsonwebtoken": "^8.3.0",
-    "mongodb": "^3.1.0"
+    "mongodb": "^3.1.0",
+    "slugify": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
