--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "GraphQL-YOGA Example with mongodb",
   "main": "src/index.js",
   "scripts": {
-    "test": "NODE_ENV=development npm run test",
-    "dev": "NODE_ENV=development nodemon -e js,json,graphql,gql src/index.js",
-    "serve": "NODE_ENV=development node src/index.js",
-    "build": "NODE_ENV=production babel src -d dist --copy-files",
-    "start": "NODE_ENV=production node dist/index.js",
+    "test": "TZ=utc NODE_ENV=development ava tests/**/*.js --verbose",
+    "test:watch": "TZ=utc NODE_ENV=development ava tests/**/*.js --verbose --watch",
+    "dev": "TZ=utc NODE_ENV=development nodemon -e js,json,graphql,gql src/index.js",
+    "serve": "TZ=utc NODE_ENV=development node src/index.js",
+    "serve-brk": "TZ=utc NODE_ENV=development node src/index.js --inspect-brk",
+    "build": "TZ=utc NODE_ENV=production babel src -d dist --copy-files",
+    "start": "TZ=utc NODE_ENV=production node dist/index.js",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "format": "find src -name '*.js' | xargs -I{} ./node_modules/.bin/prettier --write --single-quote {}"
   },
@@ -24,17 +26,37 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
     "graphql-iso-date": "^3.5.0",
+    "graphql-shield": "^2.2.5",
     "graphql-yoga": "^1.14.10",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.0",
     "slugify": "^1.3.0"
   },
   "devDependencies": {
+    "ava": "^1.0.0-beta.6",
     "eslint": "^4.19.1",
+    "eslint-plugin-ava": "^4.5.1",
     "eslint-plugin-node": "^6.0.1",
+    "graphql-request": "^1.6.0",
     "nodemon": "^1.17.5"
   },
   "engines": {
     "node": ">=8.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:node/recommended"
+    ],
+    "plugins": [
+      "ava",
+      "node"
+    ],
+    "rules": {
+      "node/exports-style": [
+        "error",
+        "module.exports"
+      ]
+    }
   }
 }
