--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "src/index.js",
   "scripts": {
     "test": "TZ=utc NODE_ENV=development ava tests/**/*.js --verbose",
-    "test-content-remove": "TZ=utc NODE_ENV=development ava tests/integration/article/content/delete.content.test.js --verbose",
+    "test:content-remove": "TZ=utc NODE_ENV=development ava tests/integration/article/content/delete.content.test.js --verbose",
+    "test:content-move": "TZ=utc NODE_ENV=development ava tests/integration/article/content/move_copy_paste.content.test.js --verbose",
+    "test:content-create": "TZ=utc NODE_ENV=development ava tests/integration/article/content/create.content.test.js --verbose",
     "test:watch": "TZ=utc NODE_ENV=development ava tests/**/*.js --verbose --watch",
     "dev": "TZ=utc NODE_ENV=development nodemon -e js,json,graphql,gql src/index.js",
     "serve": "TZ=utc NODE_ENV=development node src/index.js",
     "serve-brk": "TZ=utc NODE_ENV=development node src/index.js --inspect-brk",
-    "build": "TZ=utc NODE_ENV=production babel src -d dist --copy-files",
-    "start": "TZ=utc NODE_ENV=production node dist/index.js",
+    "start": "TZ=utc NODE_ENV=production node src/index.js",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "format": "find src -name '*.js' | xargs -I{} ./node_modules/.bin/prettier --write --single-quote {}"
   },
@@ -24,15 +25,22 @@
   "author": "Dominic Garms <djgarms@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.269.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
+    "file-type": "^8.0.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-shield": "^2.2.5",
     "graphql-type-json": "^0.2.1",
     "graphql-yoga": "^1.14.10",
     "jsonwebtoken": "^8.3.0",
+    "lodash.get": "^4.4.2",
+    "mime-types": "^2.1.18",
     "mongodb": "^3.1.0",
-    "slugify": "^1.3.0"
+    "request": "^2.87.0",
+    "slugify": "^1.3.0",
+    "streaming-s3": "^0.4.4",
+    "tus-js-client": "^1.5.1"
   },
   "devDependencies": {
     "ava": "^1.0.0-beta.6",
