--- a/package.json
+++ b/package.json
@@ -28,19 +28,15 @@
     "aws-sdk": "^2.269.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
-    "file-type": "^8.0.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-shield": "^2.2.5",
     "graphql-type-json": "^0.2.1",
     "graphql-yoga": "^1.14.10",
     "jsonwebtoken": "^8.3.0",
     "lodash.get": "^4.4.2",
-    "mime-types": "^2.1.18",
     "mongodb": "^3.1.0",
     "request": "^2.87.0",
-    "slugify": "^1.3.0",
-    "streaming-s3": "^0.4.4",
-    "tus-js-client": "^1.5.1"
+    "slugify": "^1.3.0"
   },
   "devDependencies": {
     "ava": "^1.0.0-beta.6",
