--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash.get": "^4.4.2",
     "mongodb": "^3.1.0",
+    "probe-image-size": "^4.0.0",
     "request": "^2.87.0",
     "slugify": "^1.3.0"
   },
