--- a/graphql.config.json
+++ b/graphql.config.json
@@ -1,37 +1,34 @@
 {
-
-  "README_schema" : "Specifies how to load the GraphQL schema that completion, error highlighting, and documentation is based on in the IDE",
+  "README_schema": "Specifies how to load the GraphQL schema that completion, error highlighting, and documentation is based on in the IDE",
   "schema": {
-
-    "README_file" : "Remove 'file' to use request url below. A relative or absolute path to the JSON from a schema introspection query, e.g. '{ data: ... }' or a .graphql/.graphqls file describing the schema using GraphQL Schema Language. Changes to the file are watched.",
-    "file":"src/graphql/schema.graphql",
-    "README_request" : "To request the schema from a url instead, remove the 'file' JSON property above (and optionally delete the default graphql.schema.json file).",
+    "README_request": "To request the schema from a url instead, remove the 'file' JSON property above (and optionally delete the default graphql.schema.json file).",
+    "file":"./schema.json",
     "request": {
-      "url" : "http://localhost:4000/",
-      "method" : "GET",
-      "README_postIntrospectionQuery" : "Whether to POST an introspectionQuery to the url. If the url always returns the schema JSON, set to false and consider using GET",
-      "postIntrospectionQuery" : false,
-      "README_options" : "See the 'Options' section at https://github.com/then/then-request",
-      "options" : {
+      "url": "http://localhost:4000/",
+      "method": "GET",
+      "README_postIntrospectionQuery": "Whether to POST an introspectionQuery to the url. If the url always returns the schema JSON, set to false and consider using GET",
+      "postIntrospectionQuery": false,
+      "README_options": "See the 'Options' section at https://github.com/then/then-request",
+      "options": {
         "headers": {
-          "user-agent" : "JS GraphQL"
+          "content-type":"application/json",
+          "user-agent": "JS GraphQL",
+          "projectId": "test"
         }
       }
     }
-
   },
-
   "README_endpoints": "A list of GraphQL endpoints that can be queried from '.graphql' files in the IDE",
-  "endpoints" : [
+  "endpoints": [
     {
       "name": "Default (http://localhost:8080/graphql)",
-      "url": "http://localhost:4000/",
-      "options" : {
+      "url": "http://localhost:4000",
+      "options": {
         "headers": {
-          "user-agent" : "JS GraphQL"
+          "user-agent": "JS GraphQL",
+          "projectId": "test"
         }
       }
     }
   ]
-
 }
