--- a/graphql.config.json
+++ b/graphql.config.json
@@ -2,15 +2,16 @@
   "README_schema": "Specifies how to load the GraphQL schema that completion, error highlighting, and documentation is based on in the IDE",
   "schema": {
     "README_request": "To request the schema from a url instead, remove the 'file' JSON property above (and optionally delete the default graphql.schema.json file).",
-    "file":"./schema.json",
     "request": {
       "url": "http://localhost:4000/",
-      "method": "GET",
+      "method": "POST",
       "README_postIntrospectionQuery": "Whether to POST an introspectionQuery to the url. If the url always returns the schema JSON, set to false and consider using GET",
-      "postIntrospectionQuery": false,
+      "postIntrospectionQuery": true,
       "README_options": "See the 'Options' section at https://github.com/then/then-request",
       "options": {
         "headers": {
+          "accept":"*/*",
+          "accept-encoding":"gzip,deflate,br",
           "content-type":"application/json",
           "user-agent": "JS GraphQL",
           "projectId": "test"
@@ -22,7 +23,7 @@
   "endpoints": [
     {
       "name": "Default (http://localhost:8080/graphql)",
-      "url": "http://localhost:4000",
+      "url": "http://localhost:4000/",
       "options": {
         "headers": {
           "user-agent": "JS GraphQL",
