add further roundtrips for related collections

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:content-file-ref": "TZ=utc NODE_ENV=development ava tests/integration/article/content/fileReference.content.test.js --verbose",
     "test:tag": "TZ=utc NODE_ENV=development ava tests/integration/tag/tag.test.js --verbose",
     "test:page-template": "TZ=utc NODE_ENV=development ava tests/integration/pageTemplate/pageTemplate.test.js --verbose",
+    "test:article-relations": "TZ=utc NODE_ENV=development ava tests/integration/article/article-tags.test.js --verbose",
     "test:watch": "TZ=utc NODE_ENV=development ava tests/**/*.js --verbose --watch",
     "dev": "TZ=utc NODE_ENV=development nodemon -e js,json,graphql,gql src/index.js",
     "serve": "TZ=utc NODE_ENV=development node src/index.js",
@@ -39,6 +40,7 @@
     "graphql-yoga": "^1.14.12",
     "jsonwebtoken": "^8.3.0",
     "lodash.get": "^4.4.2",
+    "lodash.pick": "^4.4.0",
     "mongodb": "^3.1.1",
     "probe-image-size": "^4.0.0",
     "request": "^2.87.0",
