fixed tests and restructed project

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:tag": "TZ=utc NODE_ENV=development ava tests/integration/tag/tag.test.js --verbose",
     "test:page-template": "TZ=utc NODE_ENV=development ava tests/integration/pageTemplate/pageTemplate.test.js --verbose",
     "test:article-relations": "TZ=utc NODE_ENV=development ava tests/integration/article/article-tags.test.js --verbose",
+    "test:article": "TZ=utc NODE_ENV=development ava tests/integration/article/article.test.js --verbose",
     "test:watch": "TZ=utc NODE_ENV=development ava tests/**/*.js --verbose --watch",
     "dev": "TZ=utc NODE_ENV=development nodemon -e js,json,graphql,gql src/index.js",
     "serve": "TZ=utc NODE_ENV=development node src/index.js",
@@ -45,6 +46,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
+    "merge-graphql-schemas": "^1.5.2",
     "mongodb": "^3.1.1",
     "probe-image-size": "^4.0.0",
     "request": "^2.87.0",
