add relation between articles and files

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:content-file-ref": "TZ=utc NODE_ENV=development ava tests/integration/article/content/fileReference.content.test.js --verbose",
     "test:tag": "TZ=utc NODE_ENV=development ava tests/integration/tag/tag.test.js --verbose",
     "test:page-template": "TZ=utc NODE_ENV=development ava tests/integration/pageTemplate/pageTemplate.test.js --verbose",
-    "test:article-relations": "TZ=utc NODE_ENV=development ava tests/integration/article/article-tags.test.js --verbose",
+    "test:article-tags": "TZ=utc NODE_ENV=development ava tests/integration/article/article-tags.test.js --verbose",
+    "test:article-files": "TZ=utc NODE_ENV=development ava tests/integration/article/article-files.test.js --verbose",
     "test:article": "TZ=utc NODE_ENV=development ava tests/integration/article/article.test.js --verbose",
     "test:watch": "TZ=utc NODE_ENV=development ava tests/**/*.js --verbose --watch",
     "dev": "TZ=utc NODE_ENV=development nodemon -e js,json,graphql,gql src/index.js",
