--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "slugify": "^1.3.0"
   },
   "devDependencies": {
-    "ava": "^1.0.0-beta.6",
-    "eslint": "^5.1.0",
-    "eslint-plugin-ava": "^4.5.1",
-    "eslint-plugin-node": "^6.0.1",
-    "graphql-request": "^1.6.0",
-    "graphql-tag": "^2.9.2",
-    "nodemon": "^1.17.5"
+    "ava": "1.0.0-rc.2",
+    "eslint": "5.9.0",
+    "eslint-plugin-ava": "5.1.1",
+    "eslint-plugin-node": "8.0.0",
+    "graphql-request": "1.8.2",
+    "graphql-tag": "2.10.0",
+    "nodemon": "1.18.7"
   },
   "engines": {
     "node": ">=8.0.0"
