--- a/package.json
+++ b/package.json
@@ -33,24 +33,24 @@
   "author": "Dominic Garms <djgarms@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.271.1",
+    "aws-sdk": "2.364.0",
     "bcryptjs": "^2.4.3",
     "deep-rename-keys": "^0.2.1",
-    "dotenv": "^6.0.0",
-    "graphql": "^0.13.2",
-    "graphql-iso-date": "^3.5.0",
-    "graphql-shield": "^2.2.5",
-    "graphql-tools": "^3.0.5",
+    "dotenv": "6.1.0",
+    "graphql": "14.0.2",
+    "graphql-iso-date": "3.6.1",
+    "graphql-shield": "4.1.0",
+    "graphql-tools": "4.0.3",
     "graphql-type-json": "^0.2.1",
-    "graphql-yoga": "^1.14.12",
-    "jsonwebtoken": "^8.3.0",
+    "graphql-yoga": "1.16.7",
+    "jsonwebtoken": "8.4.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
-    "merge-graphql-schemas": "^1.5.2",
-    "mongodb": "^3.1.1",
+    "merge-graphql-schemas": "1.5.8",
+    "mongodb": "3.1.10",
     "probe-image-size": "^4.0.0",
-    "request": "^2.87.0",
-    "slugify": "^1.3.0"
+    "request": "2.88.0",
+    "slugify": "1.3.3"
   },
   "devDependencies": {
     "ava": "1.0.0-rc.2",
