--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "serve": "TZ=utc NODE_ENV=development node src/index.js",
     "serve-brk": "TZ=utc NODE_ENV=development node src/index.js --inspect-brk",
     "start": "TZ=utc NODE_ENV=production node src/index.js",
-    "lint": "eslint --ext .js --ignore-path .gitignore .",
+    "lint": "eslint --ext .js --ignore-path .gitignore src",
     "format": "find src -name '*.js' | xargs -I{} ./node_modules/.bin/prettier --write --single-quote {}"
   },
   "keywords": [
@@ -74,6 +74,8 @@
       "node"
     ],
     "rules": {
+      "no-console": 0,
+      "no-unused-vars": 0,
       "node/exports-style": [
         "error",
         "module.exports"
