--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "slugify": "^1.3.0"
   },
   "devDependencies": {
-    "ava": "^1.0.0-beta.6",
+    "ava": "^1.0.0-rc.2",
     "eslint": "^5.1.0",
     "eslint-plugin-ava": "^4.5.1",
     "eslint-plugin-node": "^6.0.1",
